2007-06-04  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixcore/workflow/ContextImpl.java: 
	* src/de/schlund/pfixcore/workflow/Context.java: 
    * src/de/schlund/pfixcore/example/InvalidateSessionState.java: 
	* src/de/schlund/pfixxml/SessionCleaner.java: 
	* src/de/schlund/pfixxml/AbstractXMLServlet.java: 
	* projects/sample1/txt/pages/main_invalidate.xml: 
	* projects/sample1/txt/pages/main_home.xml: 
	* projects/sample1/xml/two_frames.xml: 
	* projects/sample1/conf/config.conf.xml: 
	* projects/sample1/conf/depend.xml: 
	Added method markSessionForCleanup() to Context interface. This will cause a
	session to be invalidated as soon as reasonable possible.

	* src/de/schlund/pfixcore/editor2/frontend/util/EditorApplicationContextFactory.java (run): 
	Use getBeanNamesForType() instead of deprecated getBeanDefinitionNames() method.

2007-06-01  Martin Leidig  <mleidig@schlund.de>

	* projects/core/script/webservice_json.js: Fixed problem with old Safari 
	versions (broken regexp replace callback).

2007-05-31  jtl  <jtl@schlund.de>

	* src/de/schlund/pfixcore/util/ImportText.java (handleInclude): use the method below on import...
	also reorganized the code a bit.
	* src/de/schlund/pfixcore/util/DumpText.java (stringForNode): new method. 
	used to create a checksum over the structure of the tags (this can be used to re-check on import
	after the dumped text has been translated to make sure the tag structure is still the same)

2007-05-30  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixcore/util/CheckIncludes.java: 
	Fixed bug causing check includes utility to use wrong path names
	
	* projects/core/xsl/utils.xsl: 
	Minor changes in javascript code for edit console

2007-05-30  jtl  <jtl@schlund.de>

	* src/de/schlund/pfixcore/util/DumpText.java: small cleanups 

2007-05-29  Martin Leidig  <mleidig@schlund.de>

	* projects/core/build/create_apacheconf.xsl: Removed the FollowSymLinks 